--- a/index.html
+++ b/index.html
@@ -1,1 +1,119 @@
-Tao Liu, PhD
+<!DOCTYPE html>
+<html>
+<title>Tao Liu, PhD | Assistant Professor of Biostatistics | Brown University</title>
+
+<xmp theme="united" style="display:none;">
+
+##### | [Research](#research) | [Collaborations](#collaborations) | [Teaching](#teaching) | [Publications](#pub) | [CV](#cv) |
+
+![](http://dl.dropbox.com/u/5237298/1222183630.jpg)
+
+--------------------------------------------  
+### My Contact Info
+Department of Biostatistics | Center for Statistical Sciences (CSS)  
+Brown University School of Public Health | Box GS121-7  
+Email: [tliu@stat.brown.edu](mailto:tliu@stat.brown.edu) | School web:
+[www.stat.brown.edu](http://www.stat.brown.edu/FacultyDisplay.aspx?id=1222183630)
+Phone: 401-680-0158  
+![](http://dl.dropbox.com/u/5237298/Brown-logo.gif)
+
+--------------------------------------------
+
+### Educations
+
+* Ph.D. (Biostatistics)  [University of Pennsylvania](http://www.upenn.edu), 2006
+* M.S. (Statistics) [Iowa State University](http://www.iastate.edu), 2002
+* M.S. (Civil Engineering) [Iowa State University](http://www.iastate.edu), 2001
+* B.S. (Environmental Engineering) [Tsinghua University](http://www.tsinghua.edu.cn/publish/then/index.html), 1999
+
+### Research <a id="research"\>  
+
+### Publications <a id="pub"\>  
+
+### Resume <a id="cv"\>  
+
+   [Resume](http://dl.dropbox.com/u/5237298/resume/CVtliu.pdf)
+
+
+
+### Collaborations <a id="collaborations"\>
+* Center for AIDS Research [(CFAR)](http://www.lifespan.org)
+	* *BIDMED study*:    
+  A study of brief intervention for reducing alcohol and substance
+  abuse, HIV risk behaviors, and subsequent negative consequences
+  among Emergency Department (ED) patients.   
+	(PI: Dr. Roland Merchant)
+
+	* *InVited study*:    
+    A study of rapid tests for increasing uptake rates of HIV, HBV,
+    and HCV viral testing among ED patients.     
+	(PI: Dr. Roland  Merchant)
+
+	* *VIA study*:     
+	This study compares the approach of visual inspection with acetic acid (VIA) for screening cervical cancer among HIV infected Kenya women.   
+	(PI: Dr. Susan CuUvin) 
+
+	* *DOC study*:    
+	This study is being conducted in jail in Washington DC for assessing computer-assisted intervention for HIV screening and linkage to care after jail release.    
+	(PI: Dr. Beckwith Curt) 
+
+* Alcohol Research Center on HIV
+  [(ARCH)](http://www.caas.brown.edu/Content/AlcHIV/)
+    * *RAFIKI study*:  RAFIKI means `friend' in Kenyan. This is a
+	study of cognitive based interventions for reducing alcohol use
+	among HIV infected patients [[link]]().    
+	PI: Dr. Rebecca Papas.
+
+* American College of Radiology Imaging Network [(ACRIN)](http://www.acrin.org)
+	* *RESCUE Trial*
+ 	[[ACRIN 4701]](http://www.acrin.org/PROTOCOLSUMMARYTABLE/ACRIN4701RESCUE/tabid/747/Default.aspx):     
+	A comparative effectiveness research (CER) study for comparing cost-effectiveness of CT angiography and SPECT for screening cardiovascular diseases  
+	PIs: Drs. Arther Stillman, Pam Woodward, and Constantine
+ Gatsonis.   
+	Role: Leading Statistician
+
+### Teaching [[top]](#top) <a id="teaching"\>
+
+* PHP 2603: Analysis of Longitudinal Data -- with Prof. Hogan, 2008. [[link]](teaching/PHP2603/2008spring/php2603spring2008.html) 
+* PHP 2601: Linear and Generalized Linear Models, 2008. [[link]](teaching/PHP2601/2008fall/php2601fall2008.html "PHP2601") 
+* PHP 2510: Principles of Biostatistics and Data Analysis, 2009. [[link]](teaching/PHP2510/2009fall/php2510fall2009.html "PHP2510") 
+* PHP 2511: Applied Regression Analysis, 2012 -- interim instructor. [[link]](teaching/PHP2511/2012spring/php2511spring2012.html "PHP2511")
+
+### Selected Publications [[top]](#top) 
+
+* Papers
+
+	1. Mabeya, H., Khozaim, K., Liu, T., Orango, O., Chumba, D., Pisharodi, L., and Cu-Uvin, S. (2011). "Comparison of conventional cervical cytology versus visual inspection with acetic acid (VIA) among HIV-infected women in western Kenya." *Journal of Lower Genital Tract Disease*. (In press). 
+
+	1. Merchant, R.C., Waxman, M.J., Maher, J.G., Clark, M.A., Celada, M.T., Liu, T., Simmons, E.M., Beckwith, C.G. and Mayer, K.H. (2011) "Patient and clinician ethical perspectives on the 2006 Centers for Disease Control and Prevention HIV testing methods." *Public Health Reports*. (In press). 
+
+	1. Liu, T. and Heitjan, D.F. (2011). "Sensitivity of the discrete-time Kaplan-Meier estimate to nonignorable censoring: Application in a clinical trial." *Statistics in Medicine*. (To appear). 
+
+	1. Saffarini, C.M., Heger, N.E., Yamasaki, H., Liu, T., Hall, S.J., and Boekelheide, K. (2011). "Induction and persistence of abnormal testicular cells following gestational exposure to di-(n-butyl) phthalate in p53-null mice." *The Journal of Andrology*. (In press). 
+
+* Abstracts
+
+	8. Anderson, A., Cindy, F., Liu, T, Swarts, A., Siminya, M. and Cu-Uvin, S. (2011). Effect of trichomoniasis therapy on genital HIV viral burden among African women. CROI. Feb 27-Mar 2, Boston, MA. 
+
+	9. Liu, T., Hogan, J. and Kantor, R. (2011). Optimal use of selective viral load testing for HIV treatment monitoring in resource limited settings. ENAR. March, Miami, FL. 
+
+	0. Hogan, J., Liu, T., Kantor, R., Wang, L., and Zhang, S. (2011). Optimizing diagnosis of HIV viral failure with selective use of gold standard testing in resource limited settings. Workshop on Statistical Methods in HIV research. April 14-15, 2011. 
+
+	1. Loucks, E.B., Buka, S.L., Rogers, M.L., Liu, T., Kawachi, I., Kubzansky, L.D., Martin, L., and Gilman, S.E. (2011) education and coronary heart disease risk: a propensity score matching analysis. The Society for Epidemiologic Research meeting. (submitted). 
+
+	2. Merchant R.C., Baird J.R., Nirenberg T.D., Liu T., and Ladd G.T. (2011) Increasing HIV sexual risk-taking as a function of alcohol misuse among emergency department patients, 2011 National HIV Prevention Conference, Aug 14-17, Atlanta, GA. 
+
+	3. Merchant R.C., Baird J.R., Nirenberg T.D., Liu T., and Ladd G.T. (2011). Does a history of alcohol misuse and sexual risk-taking behavior motivate emergency department patients to be tested for HIV? 2011 National HIV Prevention Conference, Aug 14-17, Atlanta, GA. 
+
+	4. Baird J.R., Merchant R.C., Nirenberg T.D., Liu T., and Ladd G.T. (2011). Increasing the uptake of testing for STDs among young female Emergency Department patients. 2011 National HIV Prevention Conference, Aug 14-17, Atlanta, GA. 
+
+
+----
+
+-> [ Last updated on Nov 15th, 2011 ] <a id="end"\> <-
+
+
+</xmp>
+
+<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+</html>
