--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Karl Broman at github</title>
+    <title>Tao Liu at github</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Karl Broman</h1>
+        <h1>Tao Liu</h1>
 
 
         <p class="view"><a href="http://biostat.wisc.edu/~kbroman">web</a><br>
