--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 
         <p class="view"><a href="http://www.stat.brown.edu/taoliu">web</a><br>
-                        <a href="http://github.com/kbroman">github</a><br>
-                        <a href="http://kbroman.wordpress.com">blog</a><br>
-                        <a href="http://twitter.com/kwbroman">@kwbroman</a><br>
+                        <a href="http://github.com/taotliu">github</a><br>
+                        <a href="http://taotliu.wordpress.com">blog</a><br>
+                        <a href="http://twitter.com/taotliu">@taotliu</a><br>
 
 
       </header>
