--- a/index.html
+++ b/index.html
@@ -27,20 +27,15 @@
       </header>
       <section>
 
-<p><a href="http://biostat.wisc.edu/%7Ekbroman">Karl Broman</a> is Professor in the <a href="http://biostat.wisc.edu">Department of Biostatistics &amp; Medical Informatics</a> at the <a href="http://wisc.edu">University of Wisconsin-Madison</a>; research in statistical genetics; developer of <a href="http://rqtl.org">R/qtl</a> (for <a href="http://r-project.org">R</a>).</p>
+<p><a href="http://www.stat.brown.edu/taoliu">Tao Liu</a> is Professor in the <a href="http://www.stat.brown.edu">Department of Biostatistics &amp</a> at the <a href="http://www.brown.edu">Brown University</a>; research in statistical methods for incomplete data, causal inference, and diagnostic testing; developer of <a href="http://????.org">R/???</a> (for <a href="http://r-project.org">R</a>).</p>
 
 <ul>
-<li><a href="http://kbroman.github.io/github_tutorial">git/github guide</a></li>
-<li><a href="http://kbroman.github.io/minimal_make">minimal make</a></li>
-<li><a href="http://kbroman.github.io/knitr_knutshell">knitr in a knutshell</a></li>
-<li><a href="http://kbroman.github.io/simple_site">simple site</a>: making
-a simple website with <a href="http://pages.github.com" style="color:#777;">GitHub Pages</a></li>
-<li><a href="http://kbroman.github.io/Tools4RR">tools for
-reproducible research</a> course</li>
-<li><a href="http://kbroman.github.io/qtlcharts">R/qtlcharts</a></li>
+<li><a href="http://taotliu.github.io/research">research</a></li>
+<li><a href="http://taotliu.github.io/something else">something else</a></li>
+<li><a href="http://kbroman.github.io/Tools4RR">tools for reproducible research</a> course</li>
 </ul>
       </section>
-      <footer>
+      <footer> under development 
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
