--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
       </header>
       <section>
 
-<p><a href="http://www.stat.brown.edu/taoliu">Tao Liu</a> is Professor in the <a href="http://www.stat.brown.edu">Department of Biostatistics &amp</a> at the <a href="http://www.brown.edu">Brown University</a>; research in statistical methods for incomplete data, causal inference, and diagnostic testing; developer of <a href="http://????.org">R/???</a> (for <a href="http://r-project.org">R</a>).</p>
+<p><a href="http://www.stat.brown.edu/taoliu">Tao Liu</a> is Assistant Professor in the <a href="http://www.stat.brown.edu">Department of Biostatistics</a> at the <a href="http://www.brown.edu">Brown University</a>; research in statistical methods for incomplete data, causal inference, and diagnostic testing; developer of <a href="http://????.org">R/???</a> (for <a href="http://r-project.org">R</a>).</p>
 
 <ul>
 <li><a href="http://taotliu.github.io/research">research</a></li>
 <li><a href="http://taotliu.github.io/something else">something else</a></li>
-<li><a href="http://kbroman.github.io/Tools4RR">tools for reproducible research</a> course</li>
+<li><a href="http://taotliu.github.io/mediation">tools for mediation analysis</a> course</li>
 </ul>
       </section>
-      <footer> under development 
+      <footer> this site is under development.  
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
