--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </header>
       <section>
 
-<p><a href="http://www.stat.brown.edu/taoliu">Tao Liu</a> is Assistant Professor in the <a href="http://www.stat.brown.edu">Department of Biostatistics</a> at the <a href="http://www.brown.edu">Brown University</a>; research in statistical methods for incomplete data, causal inference, and diagnostic testing; developer of <a href="http://????.org">R/???</a> (for <a href="http://r-project.org">R</a>).</p>
+<p><a href="http://www.stat.brown.edu/taoliu">Tao Liu</a>, Ph.D., is Assistant Professor in the <a href="http://www.stat.brown.edu">Department of Biostatistics</a> at the <a href="http://www.brown.edu">Brown University</a>; research in statistical methods for incomplete data, causal inference, and diagnostic testing; developer of <a href="http://????.org">R/???</a> (for <a href="http://r-project.org">R</a>).</p>
 
 <ul>
 <li><a href="http://taotliu.github.io/research">research</a></li>
