--- a/404.html
+++ b/404.html
@@ -3,13 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Page not found!</title>
-
-<link
-href="http://kbroman.github.io/assets/themes/twitter/bootstrap/css/bootstrap.2.2.2.min.css"
-rel="stylesheet">
-    <link
-    href="http://kbroman.github.io/assets/themes/twitter/css/style.css?body=1"
-    rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
@@ -17,15 +10,7 @@ rel="stylesheet">
 
 <div style="margin-left:50px;">
 <p>Submit an Issue at <a
-href="http://github.com/kbroman/kbroman.github.io">github.com/kbroman/kbroman.github.io</a>,
-or at one of the following:
-<ul>
-  <li><a href="http://github.com/kbroman/github_tutorial">github.com/kbroman/github_tutorial</a></li>
-  <li><a href="http://github.com/kbroman/minimal_make">github.com/kbroman/minimal_make</a></li>
-  <li><a href="http://github.com/kbroman/knitr_knutshell">github.com/kbroman/knitr_knutshell</a></li>
-  <li><a href="http://github.com/kbroman/Tools4RR">github.com/kbroman/Tools4RR</a></li>
-  <li><a href="http://github.com/kbroman/qtlcharts">github.com/kbroman/qtlcharts</a></li>
-</ul>
+href="http://github.com/taotliu/taotliu.github.io">taotliu.github.io</a>.
 </p>
 </div>
 </body></html>
