--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="view"><a href="http://www.stat.brown.edu/taoliu">web</a><br>
                         <a href="http://github.com/taotliu">github</a><br>
                         <a href="http://taotliu.wordpress.com">blog</a><br>
-                        <a href="http://twitter.com/taotliu">@taotliu</a><br>
+                  <!--      <a href="http://twitter.com/taotliu">@taotliu</a><br> -->
 
 
       </header>
@@ -32,7 +32,7 @@
 <ul>
 <li><a href="http://taotliu.github.io/research">research</a></li>
 <li><a href="http://taotliu.github.io/something else">something else</a></li>
-<li><a href="http://taotliu.github.io/mediation">tools for mediation analysis</a> course</li>
+<!-- <li><a href="http://taotliu.github.io/mediation">tools for mediation analysis</a> course</li> -->
 </ul>
       </section>
       <footer> this site is under development.  
