--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
       </header>
       <section>
 
-<p><a href="http://www.stat.brown.edu/taoliu">Tao Liu</a>, Ph.D., is Assistant Professor in the <a href="http://www.stat.brown.edu">Department of Biostatistics</a> at the <a href="http://www.brown.edu">Brown University</a>; research in statistical methods for incomplete data, causal inference, and diagnostic testing; developer of <a href="http://????.org">R/???</a> (for <a href="http://r-project.org">R</a>).</p>
+<p><a href="http://www.stat.brown.edu/taoliu">Tao Liu</a>, Ph.D., is Assistant 
+Professor in the <a href="http://www.stat.brown.edu">Department of 
+	Biostatistics</a> at the <a href="http://www.brown.edu">Brown 
+	University</a>; research in statistical methods for incomplete data, 
+causal inference, and diagnostic testing; developer of <a 
+	href="http://????.org">R/ISNI-KM</a> (for <a 
+	href="http://r-project.org">R</a>).</p>
 
 <ul>
 <li><a href="http://taotliu.github.io/research">research</a></li>
@@ -35,7 +41,7 @@
 <!-- <li><a href="http://taotliu.github.io/mediation">tools for mediation analysis</a> course</li> -->
 </ul>
       </section>
-      <footer> this site is under development.  
+      <footer> This site is under development. Contact tliu@stat.brown.edu. 
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
