--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@ Professor in the <a href="http://www.stat.brown.edu">Department of
 	Biostatistics</a> at the <a href="http://www.brown.edu">Brown 
 	University</a>; research in statistical methods for incomplete data, 
 causal inference, and diagnostic testing; developer of <a 
-	href="http://????.org">R/ISNI-KM</a> (for <a 
+	href="http://taotliu.github.io/KM-ISNI">R/ISNI-KM</a> (for <a 
 	href="http://r-project.org">R</a>).</p>
 
 <ul>
 <li><a href="http://taotliu.github.io/research">research</a></li>
-<li><a href="http://taotliu.github.io/something else">something else</a></li>
+<li><a href="http://taotliu.github.io/KM-ISNI">KM-ISNI</a></li>
 <!-- <li><a href="http://taotliu.github.io/mediation">tools for mediation analysis</a> course</li> -->
 </ul>
       </section>
