--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ causal inference, and diagnostic testing; developer of <a
 	href="http://r-project.org">R</a>).</p>
 
 <ul>
-<li><a href="http://taotliu.github.io/research">research</a></li>
+<li><a href="http://taotliu.github.io/my_research">research</a></li>
 <li><a href="http://taotliu.github.io/KM-ISNI">KM-ISNI</a></li>
 <!-- <li><a href="http://taotliu.github.io/mediation">tools for mediation analysis</a> course</li> -->
 </ul>
