--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@ causal inference, and diagnostic testing; developer of <a
 	href="http://taotliu.github.io/KM-ISNI">R/ISNI-KM</a> (for <a 
 	href="http://r-project.org">R</a>).</p>
 
+
 <ul>
+<li><a href="http://taotliu.github.io/my_bio">bio</a></li>
 <li><a href="http://taotliu.github.io/my_research">research</a></li>
 <li><a href="http://taotliu.github.io/KM-ISNI">KM-ISNI</a></li>
 <!-- <li><a href="http://taotliu.github.io/mediation">tools for mediation analysis</a> course</li> -->
