--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </header>
       <section>
 
-<p><a href="http://www.stat.brown.edu/taoliu">Tao Liu</a>, Ph.D., is Assistant 
+<p><a href="http://www.stat.brown.edu/taoliu">Tao Liu</a>, PhD, is Assistant 
 Professor in the <a href="http://www.stat.brown.edu">Department of 
 	Biostatistics</a> at the <a href="http://www.brown.edu">Brown 
 	University</a>; research in statistical methods for incomplete data, 
