--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <header>
         <h1>Tao Liu</h1>
 
+	<IMG SRC="photo.JPG" ALT="Tao Liu" WIDTH=87 HEIGHT=87>
 
         <p class="view"><a href="http://www.stat.brown.edu/taoliu">web</a><br>
                         <a href="http://github.com/taotliu">github</a><br>
@@ -43,7 +44,7 @@ causal inference, and diagnostic testing; developer of <a
 <!-- <li><a href="http://taotliu.github.io/mediation">tools for mediation analysis</a> course</li> -->
 </ul>
       </section>
-      <footer> This site is under development. Contact tliu@stat.brown.edu. 
+      <footer> Contact tliu@stat.brown.edu. 
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
