--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ causal inference, and diagnostic testing; developer of <a
 <ul>
 <li><a href="http://taotliu.github.io/my_bio">bio</a></li>
 <li><a href="http://taotliu.github.io/my_research">research</a></li>
+<li><a href="http://taotliu.github.io/my_pubs">publications</a></li>
 <li><a href="http://taotliu.github.io/resources">resources</a></li>
 <!-- <li><a href="http://taotliu.github.io/mediation">tools for mediation analysis</a> course</li> -->
 </ul>
