--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <style>
+            .fakeimg {
+              height: 200px;
+              background: #aaa;
+            }
+        </style>
     </head>
+
     <body>
         <div class="d-flex" id="wrapper">
             <!-- Sidebar-->
             <div class="border-end bg-white" id="sidebar-wrapper">
                 <div class="sidebar-heading border-bottom bg-light">~ ~ ~</div>
                 <div class="list-group list-group-flush">
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">RESEARCH</a>
+                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="research.html">RESEARCH</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">PEOPLE</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">PUBLICATIONS</a>
                     <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">SOFTWARE</a>
@@ -52,7 +59,8 @@
 
                 <!-- Page content-->
                 <div class="container-fluid">
-                    <h1 class="mt-4">Liu Research Lab @Brown</h1>
+                    <h1 class="mt-4 text-center">Liu Research Lab @Brown</h1>
+
                     <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
                     <p>
                         Make sure to keep all page content within the
@@ -63,11 +71,85 @@
                     </p>
                 </div>
 
+                
+
+
+                <div class="container-fluid mt-3">
+                    <h1>People</h1>
+                    <div class="row">
+                        <div class="col-sm-3 p-3">
+                            <img src="cinqueterre.jpg" class="rounded" alt="Cinque Terre"> 
+                        </div>
+                        <div class="col-sm-6 p-3">
+                            <p> Tao Liu Ph.D. is Associate Professor of Biostatistics. sdlkkfja s adlkkfjal falsdkjf la alkdjf lajd a dlkjadlf ja
+                                slkdjfla a dlkjfa ld alkdjflak alkdj alkj df 
+                            </p>
+                        </div>
+                    </div>
+
+                    <p> </p>
+
+                    <h3 class="bg-light">Current Students</h3>
+                        <div class="row">
+                        
+                            <div class="col-sm-3 p-3">
+                                <h5>Kexin Qu</h5>
+                                <p>Ph.D. Candidate</p>
+                                <div class="fakeimg">TBA</div>
+                            </div>
+
+                            <div class="col-sm-3 p-3">
+                                <h5>Whitney Su</h5>
+                                <p>Sc.M. Candidate</p>
+                                <div class="fakeimg">TBA</div>
+                            </div>
+
+                            <div class="col-sm-3 p-3">
+                                <h5>Zeyuan Pei</h5>
+                                <p>Tsinghua Univ</p>
+                                <div class="fakeimg">TBA</div>
+                            </div>
+                        </div>
+
+                    <h3 class="bg-light">Former Students</h3>
+                        <div class="row">
+                            <div class="col-sm-3 p-3">
+                                <h5>Blake Hansen</h5>
+                                <p>Brown Ph.D.</p>
+                                <div class="fakeimg">TBA</div>
+                            </div>
+
+                            <div class="col-sm-3 p-3">
+                                <h5>Yizhen Xu</h5>
+                                <p>Postdoc @JHU</p>
+                                <div class="fakeimg">TBA</div>
+                            </div>
+
+                            <div class="col-sm-3 p-3">
+                                <h5>Yan Sun</h5>
+                                <p>Ph.D. @GeorgiaTech</p>
+                                <div class="fakeimg">TBA</div>
+                        </div>
+
+
+                    </div>
+                </div>
+
+                <footer>
+                    <div class="mt-5 text-center">
+                        <p> Liu Research Lab @BROWN  ::  Last Updated: November 2021.</p>
+                    </div>
+                </footer>
+
             </div>
         </div>
 
+
+
+
+
         <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
