--- a/index.html
+++ b/index.html
@@ -1,156 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Liu Research Lab @Brown</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-        <style>
-            .fakeimg {
-              height: 200px;
-              background: #aaa;
-            }
-        </style>
-    </head>
+<head>
+<title></title>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script> 
+$(function(){
+  $("#header").load("header.html"); 
+  $("#footer").load("footer.html"); 
+});
+</script> 
+</head>
 
-    <body>
-        <div class="d-flex" id="wrapper">
-            <!-- Sidebar-->
-            <div class="border-end bg-white" id="sidebar-wrapper">
-                <div class="sidebar-heading border-bottom bg-light">~ ~ ~</div>
-                <div class="list-group list-group-flush">
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="research.html">RESEARCH</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">PEOPLE</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">PUBLICATIONS</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">SOFTWARE</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">CONTACT</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">NEWS+UPDATES</a>
-                </div>
-            </div>
-            <!-- Page content wrapper-->
-            <div id="page-content-wrapper">
-                <!-- Top navigation-->
-                <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-                    <div class="container-fluid">
-                        <button class="btn btn-primary" id="sidebarToggle"> < > </button>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                                <li class="nav-item active"><a class="nav-link" href="#!">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="http://brown.edu">Brown</a></li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                                    <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#!">Action</a>
-                                        <a class="dropdown-item" href="#!">Another action</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#!">Something else here</a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
+<body>
+<div id="header">a</div>
+<p>test</p>
+<!--Remaining section-->
+<div id="footer">b</div>
+</body>
 
-                <!-- Page content-->
-                <div class="container-fluid">
-                    <h1 class="mt-4 text-center">Liu Research Lab @Brown</h1>
-
-                    <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
-                    <p>
-                        Make sure to keep all page content within the
-                        <code>#page-content-wrapper</code>
-                        . The top navbar is optional, and just for demonstration. Just create an element with the
-                        <code>#sidebarToggle</code>
-                        ID which will toggle the menu when clicked.
-                    </p>
-                </div>
-
-                
-
-
-                <div class="container-fluid mt-3">
-                    <h1>People</h1>
-                    <div class="row">
-                        <div class="col-sm-3 p-3">
-                            <img src="cinqueterre.jpg" class="rounded" alt="Cinque Terre"> 
-                        </div>
-                        <div class="col-sm-6 p-3">
-                            <p> Tao Liu Ph.D. is Associate Professor of Biostatistics. sdlkkfja s adlkkfjal falsdkjf la alkdjf lajd a dlkjadlf ja
-                                slkdjfla a dlkjfa ld alkdjflak alkdj alkj df 
-                            </p>
-                        </div>
-                    </div>
-
-                    <p> </p>
-
-                    <h3 class="bg-light">Current Students</h3>
-                        <div class="row">
-                        
-                            <div class="col-sm-3 p-3">
-                                <h5>Kexin Qu</h5>
-                                <p>Ph.D. Candidate</p>
-                                <div class="fakeimg">TBA</div>
-                            </div>
-
-                            <div class="col-sm-3 p-3">
-                                <h5>Whitney Su</h5>
-                                <p>Sc.M. Candidate</p>
-                                <div class="fakeimg">TBA</div>
-                            </div>
-
-                            <div class="col-sm-3 p-3">
-                                <h5>Zeyuan Pei</h5>
-                                <p>Tsinghua Univ</p>
-                                <div class="fakeimg">TBA</div>
-                            </div>
-                        </div>
-
-                    <h3 class="bg-light">Former Students</h3>
-                        <div class="row">
-                            <div class="col-sm-3 p-3">
-                                <h5>Blake Hansen</h5>
-                                <p>Brown Ph.D.</p>
-                                <div class="fakeimg">TBA</div>
-                            </div>
-
-                            <div class="col-sm-3 p-3">
-                                <h5>Yizhen Xu</h5>
-                                <p>Postdoc @JHU</p>
-                                <div class="fakeimg">TBA</div>
-                            </div>
-
-                            <div class="col-sm-3 p-3">
-                                <h5>Yan Sun</h5>
-                                <p>Ph.D. @GeorgiaTech</p>
-                                <div class="fakeimg">TBA</div>
-                        </div>
-
-
-                    </div>
-                </div>
-
-                <footer>
-                    <div class="mt-5 text-center">
-                        <p> Liu Research Lab @BROWN  ::  Last Updated: November 2021.</p>
-                    </div>
-                </footer>
-
-            </div>
-        </div>
-
-
-
-
-
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
 </html>
