--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Liu Research Lab @Brown</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <link href="css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" >
+    <link href="css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <!--- jQuery -->
