--- a/index_.html
+++ b/index_.html
@@ -1,92 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Liu Research Lab @Brown</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <link href="css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" >
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
+</head>
 
-    <body>
-        <div class="d-flex" id="wrapper">
-            <!-- Sidebar-->
-            <div class="border-end bg-white" id="sidebar-wrapper">
-                <div class="sidebar-heading border-bottom bg-light"> . . .</div>
-                <div class="list-group list-group-flush">
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="research.html">RESEARCH</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="people.html">PEOPLE</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="publications.html">PUBLICATIONS</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">SOFTWARE</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">CONTACT</a>
-                    <a class="list-group-item list-group-item-action list-group-item-light p-3" href="#!">NEWS+UPDATES</a>
-                </div>
-            </div>
-            <!-- Page content wrapper-->
-            <div id="page-content-wrapper">
-                <!-- Top navigation-->
-                <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-                    <div class="container-fluid">
-                        <button class="btn btn-primary" id="sidebarToggle"> < > </button>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                                <li class="nav-item active"><a class="nav-link" href="#!">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="http://brown.edu">Brown</a></li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                                    <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#!">Action</a>
-                                        <a class="dropdown-item" href="#!">Another action</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#!">Something else here</a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
+<body style="height:1500px">
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="#">Fixed top</a>
+  </div>
+</nav>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+    <div class="container">
+      <a class="navbar-brand" href="#">Fixed bottom</a>
+    </div>
+  </nav>
 
 
-                <!-- Page content-->
-                <div class="container-fluid">
-                    <h1 class="mt-4 text-center">Liu Research Lab @Brown</h1>
+<div class="container" style="margin-top:80px">
+  <h1>Tao Liu Web Page</h1>
+  <p>Under development...</p>
+</div>
 
-                    <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will change.</p>
-                    <p>
-                        Make sure to keep all page content within the
-                        <code>#page-content-wrapper</code>
-                        . The top navbar is optional, and just for demonstration. Just create an element with the
-                        <code>#sidebarToggle</code>
-                        ID which will toggle the menu when clicked.
-                    </p>
-                </div>
-
-
-
-                <footer>
-                    <div class="mt-5 text-center">
-                        <p> <i class="fas fa-map-marker-alt pe-2"></i> Providence RI, USA 
-                            <i class="fas fa-phone pe-2"></i> +1 401-863-6480 
-                            <i class="fas fa-envelope pe-2 mb-0"></i> tao_daniel_liu@brown.edu 
-                        </p>
-                        <p class="mt-1"> Last Updated: November 2021.</p>
-                    </div>
-                </footer>
-
-            </div>
-        </div>
-
-
-
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+</body>
 </html>
