--- a/index_.html
+++ b/index_.html
@@ -23,12 +23,13 @@
 <div class="container" style="margin-top:100px; margin-bottom:80px;">
   <img src="images/brown1.png" alt style="width:100%" class="center"/>
 
-  <h1 class="mt-4 text-center"><b>Liu Research Lab @Brown</b></h1>
+  <h1 class="display-1 mt-5 text-center"><b>Liu Research Lab @Brown</b></h1>
     <br>
-    <h5 align="justify">This research lab is leb by Dr Liu Tao and consists of a group of young statisticians, 
-      computer scientists, and applied mathematicians. The group focus on developing novel statistical 
-      methods and expend to several collaboration domains including human behavioral science, 
-      infectious diseases (HIV, Ebola, COVID), cardiology, and oncology. Our current works are 
+    <h5 align="justify">Welcome. This research lab is led by Dr Liu Tao and consists of a group of young statisticians, 
+      computer scientists, and applied mathematicians. 
+      Our group focus on developing novel statistical 
+      methods with application to various scientific domains. 
+      Our current works are 
       motivated by issues that arise when attempting to statistically model massive data sets.  
       Our research interests include (not limited to) causal inference, statistical/machine learning, 
       longitudinal/survival data, and optimal decision making.  As a group, we welcome investigators 
