--- a/news.html
+++ b/news.html
@@ -21,13 +21,11 @@
 <body style="height:1500px">
     <div id="header"></div>
 
-    <div class="container" style="margin-top:80px; margin-bottom:100px;">
-        <div id="news" class="container-fluid mt-3">
-                
+    <div id="news" class="container" style="margin-top:80px; margin-bottom:100px;">
             <!-- Kexin Poster-->
-            <h1>News</h1>
+            <h1 class="display-3">News</h1>
             <h2 class="mt-5 bg-light">
-                <b>Kexin Qu accepted for poster presentation at the 3rd Annual Health Data Science Symposium </b>
+                Kexin Qu accepted for poster presentation at the 3rd Annual Health Data Science Symposium 
             </h2>
             <p align="justify"></p>
                 [October 28, 2021] <br> The symposium focuses on Personal Data Modeling around 
@@ -39,7 +37,7 @@
 
             <!-- Blake poster -->
             <h2 class="mt-5 bg-light">
-                <b>Blake Won Public Health Research Poster Award of 2020</b>
+                Blake Won Public Health Research Poster Award of 2020
             </h2>
             <p align="justify"></p>
                 [March 23, 2020] <br> Congratulations to Blake for winning one of the Best Master’s Poster Awards entitled 
@@ -54,7 +52,7 @@
 
             <!-- JAIDS paper 2017 -->
             <h2 class="mt-5 bg-light">
-                <b>Covariate-assisted pooling paper published in JAIDS </b>
+                Covariate-assisted pooling paper published in JAIDS 
             </h2>
             <p align="justify"></p>
                 [August 23, 2017] <br> Our work on covariate-assisted quantitative pooling strategies is published 
@@ -65,7 +63,6 @@
             <img src="images/JAIDSLiu.png" alt style="width:700px" class="center"/>
             <br>
     
-        </div>
     </div>
     ---
     <br>
