--- a/publications.html
+++ b/publications.html
@@ -21,24 +21,26 @@
   <div id="header"></div>
 
 <div class="container" style="margin-top:80px; margin-bottom:80px;">
+    <br>
+    <h2 class="mt-10">Selected Publications:</h2>
 
-    <h2 class="mt-5">Selected Publications:</h2>
-
-    <h5 class="mt-3">Methodology Research</h5>
     <li>
       <strong>Liu T</strong>, Hogan JW, Su W, Xu Y, Daniels MJ, Rami K (2021+). 
-      "Informed Pooled Testing with Quantitative Assays." (Preprint). 
+      "Informed pooled testing with quantitative assays." (Preprint). 
       <br>
       <a class="btn btn-outline-info btn-sm" href="https://arxiv.org/abs/2011.00404">arXiv</a>
-      <a class="btn btn-outline-info btn-sm" href="https://arxiv.org/pdf/2011.00404">PDF</a>
+      <a class="btn btn-outline-info btn-sm" href="https://arxiv.org/pdf/2011.00404">Preprint</a>
     </li>
     <li>
-      <strong>Liu T</strong>, Hogan JW (2021). "Unifying instrumental variable and inverse probability weighting 
+      <strong>Liu T</strong>, Hogan JW (2021). 
+      "Unifying instrumental variable and inverse probability weighting 
       approaches for inference of causal treatment effect and unmeasured confounding in 
       observational studies."" <em>Statistical Methods in Medical Research</em>, 30(3):671-86.
       <br>
       <a class="btn btn-outline-info btn-sm" href="https://journals.sagepub.com/doi/abs/10.1177/0962280220971835">
         Web</a>
+      <a class="btn btn-outline-info btn-sm" href="files/SMMR_Liu.pdf">
+          PDF</a>
     </li>
     <li>
       Xu Y, <strong>Liu T</strong>, Daniels MJ, Kantor R, Mwangi A, Hogan JW (2019). "Classification using ensemble learning 
@@ -56,28 +58,31 @@
       <br>
       <a class="btn btn-outline-info btn-sm" href="https://journals.lww.com/jaids/Fulltext/2017/08150/Improved_HIV_1_Viral_Load_Monitoring_Capacity.13.aspx?casa_token=nH7MNv1QYTYAAAAA:VLhFOEC2qHiRtePK8GEE_nksq9s2EvVFHnz6vuMS-18CcRzB0CY-vhKv_Iriy0QsxKjiPId4WtHl8xfKNBK7-uY">
         Web</a>
+        <a class="btn btn-outline-info btn-sm" href="files/liu-jaids.pdf">PDF</a>
     </li>
 
     <li>
       Federov V and <strong>Liu T</strong> (2014). "Randomized discontinuation trials with binary outcomes." 
-      The Journal of Statistical Theory and Practice, 8:30—45. (*Authorship in alphabetical order). 
+      <em>The Journal of Statistical Theory and Practice</em>, 8:30—45. (*Authorship in alphabetical order). 
       <br>
-      <a class="btn btn-outline-info btn-sm" href="#">PDF tba</a>
+      <a class="btn btn-outline-info btn-sm" href="https://www.tandfonline.com/doi/abs/10.1080/15598608.2014.840492">Web</a>
+      <a class="btn btn-outline-info btn-sm" href="files/RDT2013JSTP10.pdf">PDF</a>
     </li>
 
     <li>
-      Xu H*, Short SE, and Liu T (2013). “Dynamic relations between fast-food restaurant and body weight status: A longitudinal and multilevel analysis of Chinese adults.” Journal of Epidemiology & Community Health, 67:271-279. [PMID: 22923769]. 
+      Xu H*, Short SE, and <strong>Liu T</strong> (2013). “Dynamic relations between fast-food restaurant and body weight status: A longitudinal and multilevel analysis of Chinese adults.” Journal of Epidemiology & Community Health, 67:271-279. [PMID: 22923769]. 
       <br>(*Advised student; <strong>2009 Brown Global Health Award</strong>). 
       <br>
-      <a class="btn btn-outline-info btn-sm" href="#">PDF tba</a>
+      <a class="btn btn-outline-info btn-sm" href="https://jech.bmj.com/content/67/3/271">Web</a>
     </li>
 
     <li>
-      <strong>Liu T</strong>, Hogan JW, Wang L, Zhang S and Kantor R (2013). "Optimal Allocation of Gold Standard 
-      Testing under Constrained Availability: Application to Assessment of HIV Treatment Failure." 
+      <strong>Liu T</strong>, Hogan JW, Wang L, Zhang S and Kantor R (2013). "Optimal allocation of gold standard 
+      testing under constrained availability: Application to assessment of HIV treatment failure." 
       <em>Journal of the American Statistical Association (JASA)</em>, 108 (504): 1173—1188. 
       <br>
-      <a class="btn btn-outline-info btn-sm" href="#">PDF tba</a>
+      <a class="btn btn-outline-info btn-sm" href="https://www.tandfonline.com/doi/abs/10.1080/01621459.2013.810149">Web</a>
+      <a class="btn btn-outline-info btn-sm" href="files/Liu_JASA.pdf">PDF</a>
     </li>
 
     <li>
@@ -86,16 +91,16 @@
       <em>Statistics in Medicine</em>, 31: 2998-3010.  
       <br>(<strong>ENAR Best Paper Award</strong>)
       <br>
-      <a class="btn btn-outline-info btn-sm" href="#">PDF tba</a>
+      <a class="btn btn-outline-info btn-sm" href="https://onlinelibrary.wiley.com/doi/10.1002/sim.5454">Web</a>
+      <a class="btn btn-outline-info btn-sm" href="files/Liu_sim.pdf">PDF</a>
     </li>
     <li>
       Hogan JW and <strong>Liu T</strong> (2008). “Mediation analysis for intervention trial: Objectives, models and inference.” 
       <em>Health Services and Outcomes Research Method</em>, 8: 77-79. 
       <br>
-      <a class="btn btn-outline-info btn-sm" href="#">PDF tba</a>
+      <a class="btn btn-outline-info btn-sm" href="https://link.springer.com/article/10.1007/s10742-008-0031-1">Web</a>
     </li>
 
-    <h5 class="mt-5">Collaborative Research</h5>
     <li>
       Kahler CW, <strong>Liu T</strong>, Cioe PA, Bryant V, Pinkston MM, Kojic EM, Onen N, Baker JV, Hammer J, 
       Brooks JT, Patel P (2017). "Direct and indirect effects of heavy alcohol use on clinical outcomes in a longitudinal study of HIV patients on ART." 
