--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="css/styles.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   <script> 
@@ -19,20 +20,53 @@
 
 <body style="height:1500px">
   <div id="header"></div>
+  
+  <div id="contact" class="container" style="margin-top:80px; margin-bottom:100px;">
+    <h1 class="display-3">Contact</h1>
+    
+    <img src="images/brown2.png" class="img-thumbnail mt-3">
 
-<div class="container" style="margin-top:80px; margin-bottom:80px;">
-    <b>Office: </b>   
-    <br>Department of Biostatistics  
-    <br>Center for Statistical Sciences
-    <br>121 S Main St. (Room #705)
-    <br>PO Box G-S121-7
-    <br>Brown University
-    <br>Providence, RI 02903
-    <br> <br>
-    <b>Email: </b>   
-    <br>tao_daniel_liu@brown.edu
+    <div class="row mt-5">
+      <div class="col-sm-6 p-3">
+        <h4 class="bg-light">Office: </h4>   
+        Department of Biostatistics  
+        <br>Center for Statistical Sciences
+        <br>Room #705
 
-</div>
+        <br><br>
+        <h4  class="bg-light">Address: </h4>   
+        121 South Main St. 
+        <br>PO Box G-S121-7
+        <br>Brown University
+        <br>Providence, RI 029012
+        <br>
+        <a class="btn btn-outline-info btn-sm" href="https://www.google.com/maps/place/121+S+Main+St,+Providence,+RI+02903/@41.8239618,-71.4092166,17z/data=!3m1!4b1!4m5!3m4!1s0x89e445160f613f19:0x115cacc88b52049b!8m2!3d41.8239618!4d-71.4070226">
+          <i class="fa fa-map pe-2" style="color:blue"></i>Map</a> 
+      </div>
+     
+      <div class="col-sm-6 p-3">
+        <h4 class="bg-light">Email: </h4>   
+        tao_daniel_liu[at]]brown.edu, or
+        <br>
+        tliu[a]stat.brown.edu
+        <br>
+        <a class="btn btn-outline-info btn-sm mt-2" href="mailto:tao_daniel_liu@brown.edu">
+          <i class="fa fa-envelope pe-2 mb-0" style="color:blue"></i>Email me</a>
+
+        <br> <br>
+        <h4  class="bg-light">Phone: </h4>
+        401-863-6480 (office)
+        <br>401-863-9182 (fax)
+
+        <br> <br>
+        <h4 class="bg-light">Appointment: </h4>
+        Please use the following link to suggest a time. 
+        <br>
+        <a class="btn btn-outline-info btn-sm mt-2" href="https://www.vyte.in/tliu">
+          <i class="fa fa-calendar pe-2" style="color:blue"></i> Schedule Meeting(s)</a>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
