--- a/headerFooter.html
+++ b/headerFooter.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container">
-      <a class="btn btn-primary" href="index.html"">L. Lab >>></a>
+      <a class="btn btn-primary" href="index_.html"">L. Lab >>></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
           <ul class="navbar-nav">
-              <li class="nav-item active"><a class="nav-link" href="#">Welcome...</a></li>
+              <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
               <li class="nav-item active"><a class="nav-link" href="news.html">News</a></li>
               <li class="nav-item active"><a class="nav-link" href="research.html">Research</a></li>
               <li class="nav-item active"><a class="nav-link" href="people.html">People</a></li>
@@ -15,11 +15,11 @@
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">External Links</a>
                   <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#!">Brown Biostat</a>
+                      <a class="dropdown-item" href="#!">Brown Biostatistics</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#!">Brown CSS</a>
-                      <a class="dropdown-item" href="#!">Brown DSI</a>
-                      <a class="dropdown-item" href="#!">Brown CTR</a>
+                      <a class="dropdown-item" href="#!">Brown Center for Statistical Sciences</a>
+                      <a class="dropdown-item" href="#!">Brown Data Science Initiative</a>
+                      <a class="dropdown-item" href="#!">Brown Center for Translational Research</a>
                   </div>
               </li>
           </ul>
@@ -28,13 +28,13 @@
 </nav>
 
 <!--- Footer -->
-<nav class="navbar navbar-expand-sm bg-light navbar-light fixed-bottom">
-      <div class="container">
-          <span class="navbar-text text-center">
-              <i class="fa fa-map-marker pe-2"></i> 121 S Main St, Providence RI, USA ::  
-              <i class="fa fa-phone pe-2"></i>+1 401-863-6480 :: 
+<nav class="navbar navbar-expand-sm bg-light navbar-light fixed-bottom ">
+      <div class="container text-center justify-content-center text-sm">
+          <span class="navbar-text"> 
+              Contact: 
+              <i class="fa fa-phone pe-2"></i>+1 401-863-6480 /
               <i class="fa fa-envelope pe-2 mb-0"></i>tao_daniel_liu@brown.edu 
-              <br> Last Updated: November 2021.
+              
           </span>
       </div>
 </nav>
