--- a/research.html
+++ b/research.html
@@ -22,7 +22,9 @@
   <div id="header"></div>
 
     <div class="container" style="margin-top:80px; margin-bottom:80px;">
-            
+
+        <h1 class="display-3">Research</h1>
+
         <h2 class="mt-5 bg-light">
             Optimal Allocation of Gold Standard Testing Under Constrained Availability
         </h2>
